@@ -15,144 +15,144 @@
 -------------------------------------------------------------------------------------
 EnergyCorrelator:  ECF(N,beta) with pt_R
 -------------------------------------------------------------------------------------
-   beta       N=1 (GeV)     N=2 (GeV^2)     N=3 (GeV^3)     N=4 (GeV^4) 
-  0.100          983.64       265690.56     27540663.76   1287213926.38 
-  0.200          983.64       172787.11      8222752.45    134175168.40 
-  0.500          983.64        52039.98       364021.49       608244.06 
-  1.000          983.64        10006.49         9934.06         2670.10 
-  1.500          983.64         3001.20         1066.15          118.17 
-  2.000          983.64         1272.64          260.18           14.88 
+   beta      N=1 (GeV)    N=2 (GeV^2)    N=3 (GeV^3)    N=4 (GeV^4)     N=5 (GeV^5)
+  0.100         983.64      265690.56    27540663.76  1287213926.38  30113720909.66 
+  0.200         983.64      172787.11     8222752.45   134175168.40    888560847.26 
+  0.500         983.64       52039.98      364021.49      608244.06       356259.05 
+  1.000         983.64       10006.49        9934.06        2670.10          271.98 
+  1.500         983.64        3001.20        1066.15         118.17            4.24 
+  2.000         983.64        1272.64         260.18          14.88            0.22 
 -------------------------------------------------------------------------------------
 
 -------------------------------------------------------------------------------------
 EnergyCorrelatorRatio:  r_N^(beta) = ECF(N+1,beta)/ECF(N,beta) with pt_R
 -------------------------------------------------------------------------------------
-   beta       N=0 (GeV)       N=1 (GeV)       N=2 (GeV)       N=3 (GeV) 
-  0.100        983.6369        270.1104        103.6569         46.7387 
-  0.200        983.6369        175.6615         47.5889         16.3175 
-  0.500        983.6369         52.9057          6.9950          1.6709 
-  1.000        983.6369         10.1730          0.9928          0.2688 
-  1.500        983.6369          3.0511          0.3552          0.1108 
-  2.000        983.6369          1.2938          0.2044          0.0572 
+   beta      N=0 (GeV)      N=1 (GeV)      N=2 (GeV)      N=3 (GeV)       N=4 (GeV) 
+  0.100       983.6369       270.1104       103.6569        46.7387         23.3945 
+  0.200       983.6369       175.6615        47.5889        16.3175          6.6224 
+  0.500       983.6369        52.9057         6.9950         1.6709          0.5857 
+  1.000       983.6369        10.1730         0.9928         0.2688          0.1019 
+  1.500       983.6369         3.0511         0.3552         0.1108          0.0359 
+  2.000       983.6369         1.2938         0.2044         0.0572          0.0151 
 -------------------------------------------------------------------------------------
 
 -------------------------------------------------------------------------------------
 EnergyCorrelatorDoubleRatio:  C_N^(beta) = r_N^(beta)/r_{N-1}^(beta) with pt_R
 -------------------------------------------------------------------------------------
-   beta             N=1             N=2             N=3 
-  0.100        0.274604        0.383758        0.450898 
-  0.200        0.178584        0.270913        0.342885 
-  0.500        0.053786        0.132217        0.238870 
-  1.000        0.010342        0.097588        0.270742 
-  1.500        0.003102        0.116430        0.312016 
-  2.000        0.001315        0.158011        0.279675 
+   beta            N=1            N=2            N=3            N=4 
+  0.100       0.274604       0.383758       0.450898       0.500538 
+  0.200       0.178584       0.270913       0.342885       0.405845 
+  0.500       0.053786       0.132217       0.238870       0.350540 
+  1.000       0.010342       0.097588       0.270742       0.378972 
+  1.500       0.003102       0.116430       0.312016       0.323906 
+  2.000       0.001315       0.158011       0.279675       0.263310 
 -------------------------------------------------------------------------------------
 
 -------------------------------------------------------------------------------------
 EnergyCorrelator:  ECF(N,beta) with E_theta
 -------------------------------------------------------------------------------------
-   beta       N=1 (GeV)     N=2 (GeV^2)     N=3 (GeV^3)     N=4 (GeV^4) 
-  0.100         1378.16       504056.94     68362746.10   4040636656.75 
-  0.200         1378.16       316828.68     18441161.70    345185274.86 
-  0.500         1378.16        86243.22       614652.00       941844.70 
-  1.000         1378.16        14186.79        11682.63         2060.77 
-  1.500         1378.16         3751.90          907.11           39.34 
-  2.000         1378.16         1439.57          152.71            1.84 
+   beta      N=1 (GeV)    N=2 (GeV^2)    N=3 (GeV^3)    N=4 (GeV^4)     N=5 (GeV^5)
+  0.100        1378.16      504056.94    68362746.10  4040636656.75 115642116882.51 
+  0.200        1378.16      316828.68    18441161.70   345185274.86   2475861856.72 
+  0.500        1378.16       86243.22      614652.00      941844.70       459093.24 
+  1.000        1378.16       14186.79       11682.63        2060.77           92.98 
+  1.500        1378.16        3751.90         907.11          39.34            0.27 
+  2.000        1378.16        1439.57         152.71           1.84            0.00 
 -------------------------------------------------------------------------------------
 
 -------------------------------------------------------------------------------------
 EnergyCorrelatorRatio:  r_N^(beta) = ECF(N+1,beta)/ECF(N,beta) with E_theta
 -------------------------------------------------------------------------------------
-   beta       N=0 (GeV)       N=1 (GeV)       N=2 (GeV)       N=3 (GeV) 
-  0.100       1378.1622        365.7457        135.6250         59.1058 
-  0.200       1378.1622        229.8922         58.2055         18.7182 
-  0.500       1378.1622         62.5784          7.1270          1.5323 
-  1.000       1378.1622         10.2940          0.8235          0.1764 
-  1.500       1378.1622          2.7224          0.2418          0.0434 
-  2.000       1378.1622          1.0446          0.1061          0.0121 
+   beta      N=0 (GeV)      N=1 (GeV)      N=2 (GeV)      N=3 (GeV)       N=4 (GeV) 
+  0.100      1378.1622       365.7457       135.6250        59.1058         28.6198 
+  0.200      1378.1622       229.8922        58.2055        18.7182          7.1726 
+  0.500      1378.1622        62.5784         7.1270         1.5323          0.4874 
+  1.000      1378.1622        10.2940         0.8235         0.1764          0.0451 
+  1.500      1378.1622         2.7224         0.2418         0.0434          0.0069 
+  2.000      1378.1622         1.0446         0.1061         0.0121          0.0013 
 -------------------------------------------------------------------------------------
 
 -------------------------------------------------------------------------------------
 EnergyCorrelatorDoubleRatio:  C_N^(beta) = r_N^(beta)/r_{N-1}^(beta) with E_theta
 -------------------------------------------------------------------------------------
-   beta             N=1             N=2             N=3 
-  0.100        0.265387        0.370818        0.435803 
-  0.200        0.166811        0.253186        0.321588 
-  0.500        0.045407        0.113888        0.215004 
-  1.000        0.007469        0.079997        0.214207 
-  1.500        0.001975        0.088810        0.179360 
-  2.000        0.000758        0.101555        0.113867 
+   beta            N=1            N=2            N=3            N=4 
+  0.100       0.265387       0.370818       0.435803       0.484212 
+  0.200       0.166811       0.253186       0.321588       0.383186 
+  0.500       0.045407       0.113888       0.215004       0.318106 
+  1.000       0.007469       0.079997       0.214207       0.255786 
+  1.500       0.001975       0.088810       0.179360       0.160180 
+  2.000       0.000758       0.101555       0.113867       0.106401 
 -------------------------------------------------------------------------------------
 
 -------------------------------------------------------------------------------------
 EnergyCorrelator:  ECF(N,beta) with pt_R
 -------------------------------------------------------------------------------------
-   beta       N=1 (GeV)     N=2 (GeV^2)     N=3 (GeV^3)     N=4 (GeV^4) 
-  0.100          910.03       163661.63     10858223.95    340994615.02 
-  0.200          910.03       111307.49      3950123.18     59638399.31 
-  0.500          910.03        40470.38       446453.20      2147680.90 
-  1.000          910.03        13863.90        65435.19       142222.94 
-  1.500          910.03         8417.59        26548.97        39560.12 
-  2.000          910.03         6328.24        16871.11        21081.97 
+   beta      N=1 (GeV)    N=2 (GeV^2)    N=3 (GeV^3)    N=4 (GeV^4)     N=5 (GeV^5)
+  0.100         910.03      163661.63    10858223.95   340994615.02   5907941830.38 
+  0.200         910.03      111307.49     3950123.18    59638399.31    478368362.42 
+  0.500         910.03       40470.38      446453.20     2147680.90      5564873.72 
+  1.000         910.03       13863.90       65435.19      142222.94       166409.02 
+  1.500         910.03        8417.59       26548.97       39560.12        31484.21 
+  2.000         910.03        6328.24       16871.11       21081.97        13743.58 
 -------------------------------------------------------------------------------------
 
 -------------------------------------------------------------------------------------
 EnergyCorrelatorRatio:  r_N^(beta) = ECF(N+1,beta)/ECF(N,beta) with pt_R
 -------------------------------------------------------------------------------------
-   beta       N=0 (GeV)       N=1 (GeV)       N=2 (GeV)       N=3 (GeV) 
-  0.100        910.0320        179.8416         66.3456         31.4043 
-  0.200        910.0320        122.3116         35.4884         15.0979 
-  0.500        910.0320         44.4714         11.0316          4.8105 
-  1.000        910.0320         15.2345          4.7198          2.1735 
-  1.500        910.0320          9.2498          3.1540          1.4901 
-  2.000        910.0320          6.9539          2.6660          1.2496 
+   beta      N=0 (GeV)      N=1 (GeV)      N=2 (GeV)      N=3 (GeV)       N=4 (GeV) 
+  0.100       910.0320       179.8416        66.3456        31.4043         17.3256 
+  0.200       910.0320       122.3116        35.4884        15.0979          8.0211 
+  0.500       910.0320        44.4714        11.0316         4.8105          2.5911 
+  1.000       910.0320        15.2345         4.7198         2.1735          1.1701 
+  1.500       910.0320         9.2498         3.1540         1.4901          0.7959 
+  2.000       910.0320         6.9539         2.6660         1.2496          0.6519 
 -------------------------------------------------------------------------------------
 
 -------------------------------------------------------------------------------------
 EnergyCorrelatorDoubleRatio:  C_N^(beta) = r_N^(beta)/r_{N-1}^(beta) with pt_R
 -------------------------------------------------------------------------------------
-   beta             N=1             N=2             N=3 
-  0.100        0.197621        0.368911        0.473344 
-  0.200        0.134404        0.290147        0.425431 
-  0.500        0.048868        0.248061        0.436069 
-  1.000        0.016741        0.309811        0.460503 
-  1.500        0.010164        0.340980        0.472444 
-  2.000        0.007641        0.383385        0.468712 
+   beta            N=1            N=2            N=3            N=4 
+  0.100       0.197621       0.368911       0.473344       0.551696 
+  0.200       0.134404       0.290147       0.425431       0.531277 
+  0.500       0.048868       0.248061       0.436069       0.538632 
+  1.000       0.016741       0.309811       0.460503       0.538330 
+  1.500       0.010164       0.340980       0.472444       0.534103 
+  2.000       0.007641       0.383385       0.468712       0.521701 
 -------------------------------------------------------------------------------------
 
 -------------------------------------------------------------------------------------
 EnergyCorrelator:  ECF(N,beta) with E_theta
 -------------------------------------------------------------------------------------
-   beta       N=1 (GeV)     N=2 (GeV^2)     N=3 (GeV^3)     N=4 (GeV^4) 
-  0.100          934.39       173035.93     11869881.64    387687952.45 
-  0.200          934.39       117791.85      4351824.23     69148951.24 
-  0.500          934.39        43220.34       507378.92      2589996.65 
-  1.000          934.39        15182.02        75656.66       165115.95 
-  1.500          934.39         9296.03        30143.02        40417.01 
-  2.000          934.39         6943.30        18259.83        17679.34 
+   beta      N=1 (GeV)    N=2 (GeV^2)    N=3 (GeV^3)    N=4 (GeV^4)     N=5 (GeV^5)
+  0.100         934.39      173035.93    11869881.64   387687952.45   7030672399.84 
+  0.200         934.39      117791.85     4351824.23    69148951.24    587495287.84 
+  0.500         934.39       43220.34      507378.92     2589996.65      7002091.93 
+  1.000         934.39       15182.02       75656.66      165115.95       178354.07 
+  1.500         934.39        9296.03       30143.02       40417.01        24563.71 
+  2.000         934.39        6943.30       18259.83       17679.34         7116.38 
 -------------------------------------------------------------------------------------
 
 -------------------------------------------------------------------------------------
 EnergyCorrelatorRatio:  r_N^(beta) = ECF(N+1,beta)/ECF(N,beta) with E_theta
 -------------------------------------------------------------------------------------
-   beta       N=0 (GeV)       N=1 (GeV)       N=2 (GeV)       N=3 (GeV) 
-  0.100        934.3868        185.1866         68.5978         32.6615 
-  0.200        934.3868        126.0633         36.9450         15.8896 
-  0.500        934.3868         46.2553         11.7394          5.1047 
-  1.000        934.3868         16.2481          4.9833          2.1824 
-  1.500        934.3868          9.9488          3.2426          1.3408 
-  2.000        934.3868          7.4309          2.6299          0.9682 
+   beta      N=0 (GeV)      N=1 (GeV)      N=2 (GeV)      N=3 (GeV)       N=4 (GeV) 
+  0.100       934.3868       185.1866        68.5978        32.6615         18.1349 
+  0.200       934.3868       126.0633        36.9450        15.8896          8.4961 
+  0.500       934.3868        46.2553        11.7394         5.1047          2.7035 
+  1.000       934.3868        16.2481         4.9833         2.1824          1.0802 
+  1.500       934.3868         9.9488         3.2426         1.3408          0.6078 
+  2.000       934.3868         7.4309         2.6299         0.9682          0.4025 
 -------------------------------------------------------------------------------------
 
 -------------------------------------------------------------------------------------
 EnergyCorrelatorDoubleRatio:  C_N^(beta) = r_N^(beta)/r_{N-1}^(beta) with E_theta
 -------------------------------------------------------------------------------------
-   beta             N=1             N=2             N=3 
-  0.100        0.198191        0.370425        0.476130 
-  0.200        0.134916        0.293067        0.430089 
-  0.500        0.049503        0.253795        0.434833 
-  1.000        0.017389        0.306701        0.437950 
-  1.500        0.010647        0.325926        0.413512 
-  2.000        0.007953        0.353909        0.368161 
+   beta            N=1            N=2            N=3            N=4 
+  0.100       0.198191       0.370425       0.476130       0.555237 
+  0.200       0.134916       0.293067       0.430089       0.534693 
+  0.500       0.049503       0.253795       0.434833       0.529617 
+  1.000       0.017389       0.306701       0.437950       0.494940 
+  1.500       0.010647       0.325926       0.413512       0.453265 
+  2.000       0.007953       0.353909       0.368161       0.415742 
 -------------------------------------------------------------------------------------
 
